CR-2003-04-09-2  Testsuite: communication test:
                            using testsuite_snd/_rcv -tcp-close option for test

CR-2003-04-09-1  Testsuite: using of open_spawn_process() may cause problems
                            on NFS mounted testsuite installations. Using
                            open_remote_spawn_process() even for local spawns.

EB-2003-04-09-0  Bugfix:    cannot qalter/qhold/qrls several tasks of same job
                 Issue:     526
                 Bugtraq:   4845505
                 Changed:   qalter
                 Review:    JG

JG-2003-04-09-1  Bugfix:    utilbin/spooldefaults didn't write managers and
                            operators in classic spooling.

JG-2003-04-09-0  Enhancem.: Enable use of flatfile spooling for qmaster.
                            Changed the installation process to call a special 
                            spooling client to create default configurations 
                            using the selected spooling method.

CR-2003-04-09-0  Testsuite: communication test:
                            - fixed compiler warnings 
                 Changed:   testsuite_rcv, testsuite_snd

BD-2003-04-09-0  Bugfix:    Remove accidently comitted qmake binaries.

CR-2003-04-08-7  Bugfix:    with CR-2003-04-08-4 was also changing SOLARIS
                            and SOLARIS64 - now it only switches to -xO3 for
                            SOLARIS86

CR-2003-04-08-6  Bugfix:    synchronized qmake Makefiles for all architectures
                            - disabled automatic Makefile generation through
                              configure 

CR-2003-04-08-5  Testsuite: communication test:
                            - new options for test binaries
                 Changed:   testsuite_rcv, testsuite_snd

CR-2003-04-08-4  Bugfix:    using -xO3 instead of -xO4 for SOLARIS86
                 Changed:   aimk

EB-2003-04-08-1  Bugfix:    qdel -u <user> does not delete all jobs of the user