@@ -1,3 +1,11 @@
+EB-2003-04-10-1  Testsuite: test #524: qdel -u <user> does not delete all jobs 
+                            of the user
+                 Issue:     528
+
+EB-2003-04-10-0  Testsuite: test #526: cannot qalter/qhold/qrls several tasks 
+                            of same job
+                 Issue:     527
+
 CR-2003-04-09-2  Testsuite: communication test:
                             using testsuite_snd/_rcv -tcp-close option for test
 
